removed borders, cleaned up look, still issues with content alignment, and paragraphs getting squished.

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -1,9 +1,8 @@
-/* main {
-    display: block;
-    flex-direction: column;
-    width: 100%;
-    margin auto;
-} */
+main {
+    border: 1px solid rgb(139, 139, 135);
+    width: 99%;
+    margin: 5px auto;
+}
 
 #directoryButton {
     display: flex;
@@ -45,14 +44,19 @@ h3 {
 
 .list section {
     display: grid;
-    grid-template-columns: 1fr 2px 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 2px 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     justify-content: stretch;
     align-items: stretch;
-    border: 2px solid orange;
+    border: none;
+    border-radius: 0px;
     box-shadow: none; 
     text-align: left;
 
+}
+
+.list section:nth-child(odd){
+    background-color: aliceblue;
 }
 
 .list .businessName {
@@ -60,40 +64,41 @@ h3 {
     grid-column-start: 1;
     font-style: normal;
     margin: 0px;
-    background-color: white;
-    border: 2px solid orange;
-}
+    background-color: inherit;
+    text-align: left;
+/*     border: 2px solid orange;
+ */}
 
 .list .businessIcon {
     display: none;
-    border: 2px solid orange;
-    grid-column-start: 2;
+/*     border: 2px solid orange;
+ */    grid-column-start: 2;
 }
 
 .list .street {
     display: block;
     grid-column-start: 3;
-    border: 2px solid orange;
-}
+/*     border: 2px solid orange;
+ */}
 
 .list .region {
     display: block;
     grid-column-start: 4;
-    border: 2px solid orange;
-}
+/*     border: 2px solid orange;
+ */}
 
 .list .phone {
     display: block;
     grid-column-start: 5;
-    border: 2px solid orange;
-}
+/*     border: 2px solid orange;
+ */}
 
 .list .website {
     display: block;
     grid-column-start: 6;
     margin: 0px;
-    border: 2px solid orange;
-}
+/*     border: 2px solid orange;
+ */}
 
 .list a, list p {
     display: block;
